ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2013/02/20 - jgonzale - Simulator - 4.4.0
	FEATURES:	Backport of the 'lib_extern_model' support to compute some
				communications parameters externally to the simulator core.

2013/01/31 - jgonzale - GUI - 4.3.7
	CHANGES:	Added execution permission for all users to the 'DimemasGUI'
				script

2013/01/31 - jgonzale - prv2dim - 4.3.7
	CHANGES:	Changed the message of the translator when detecting
				non-deterministic MPI primitives in the translation

2013/01/30 - jgonzale - GUI
	BUGFIX:		Solved a problem when using 'chunked mapping'. Now each
				node is saturated in terms of its number of processors and
				the processes that not fall in any node, are mapped to
				the last node

2013/01/03 - jgonzale - prv2dim - 4.3.6
	BUGFIX:		MPI_Test[*] primitives are translated as communication
				wait records

2013/01/02 - jgonzale - Simulator | GUI
	BUGFIX:		Dimemas[GUI] not robust against ':' in trace name

2012/12/17 - jgonzale - Simulator - 4.3.5
	BUGFIX:		Collective operations compute the inter-node 'fans' when
				just one node involved

	BUGFIX:		Event type/values are now managed using 'unsigned long long'
				variables

	FEATURES:	Added 'TODO' file

2012/12/13 - jgonzale - Simulator - 4.3.4
	CHANGES:	Added the PID to Paraver temporal files to allow multiple
				simultaneos executions.

	CHANGES:	Increased the bison stack size.

2012/12/03 - jgonzale - Simulator - 4.3.3
	BUGFIX:		TASK_end / PARAVER_end order reversed. On file_data_access
				total number of file pointers reserved minus 2, so as to 
				guarantee the availability to the Paraver trace generator.

2012/12/03 - jgonzale - Simulator - 4.3.2
	BUGFIX:		TASK_end was called after PARAVER_end causing a resource lock
				regarding the total number of files opened.
